# blockchain_minip

./: .gitignore  Anchor.toml  README.md  docker-compose.yml  package-lock.json  package.json  test_onchain.mjs
backend/: package-lock.json  package.json  server.js
backend/models/: Dataset.js  Version.js
backend/routes/: datasets.js
backend/services/: db.js  solana.js
backend/utils/: hash.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AuroraBackground.jsx  Footer.jsx  Navbar.jsx  Toast.jsx  WalletModal.jsx
frontend/src/context/: WalletContext.jsx
frontend/src/idl/: research_provenance.json
frontend/src/pages/: Dashboard.jsx  DatasetDetail.jsx  Home.jsx  Register.jsx  Verify.jsx
frontend/src/services/: solana.js
idl/: research_provenance.json
programs/research_provenance/: Cargo.toml
programs/research_provenance/src/: lib.rs
test_wallets/: wallet_A.json  wallet_B.json
