[package]
name = "research-provenance"
version = "0.1.0"
description = "Blockchain-based Research Data Provenance System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "research_provenance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
